1.36.0 (April 7th, 2025)

- Add: max time detection for non signal rules to not see an entity as silent due to is death (#824)
- Add: reportIntervalAttr, maxTimeDetectionAttr and maxTimeDetection optional fields to non signal rules (#824)
- Add: env var PERSEO_NON_SIGNAL_MAX_TIME_DETECTION to set global nonSignalMaxTimeDetection (#824)
- Fix: remove cache token when action rule uses trust at update or remove rule (#831)
- Fix: prevent Perseo from crashing on startup with malformed configTrust file (#830)

1.35.0 (March 4th, 2025)

- Add: env var PERSEO_MONGO_DB_NAME to set mongo DB name (#819)
- Upgrade express from 4.19.2 to 4.21.2
- Upgrade body-parser dep from 1.18.2 to 1.20.3
- Upgrade nodemailer dep from 6.9.13 to 6.9.16
- Upgrade: nanoid dependency from 3.3.4 to 3.3.8 (solving vulnerability CVE-2024-55565)
- Fix: deprecated mongo warnings about save and remove methods (#806)
- Fix: remove unnecessary env vars (PERSEO_MONGO_HOST and PERSEO_CORE_URL) from Dockerfile (#810)

1.34.0 (July 30th, 2024)

- Fix: smtpConfig after error in emailAction rule (#798)

1.33.0 (July 29th, 2024)

- Fix: do not search in entities collection with strict mode by non_signal checker (#793)
- Fix: do not try cast entity id and entity type in update rules when expand parameters of rule to avoid BadRequest en CB tries to update that entities (#791)
- Fix: do not invoke calback twice when error about trust not found in trustConf (#790)

1.32.0 (June 13th, 2024)

- Add: Send multiple sms when multiple destination in sms action
- Fix: upgrade rule in mongo using service and subservice to avoid match with other rule (#783)

1.31.0 (June 11th, 2024)

- Fix: release transport resources of nodemailer after send email
- Upgrade express dep from 4.18.1 to 4.19.2 due to a vulnerability
- Upgrade nodemailer dep from 6.6.5 to 6.9.13 due to a vulnerability

1.30.0 (February 26th, 2024)

- Fix: do not stringify template in postAction if it is already a string (#763)

1.29.0 (December 1st, 2023)
