@@ -29,7 +29,8 @@ var util = require('util'),
     config = require('../../config'),
     myutils = require('../myutils'),
     alarm = require('../alarm'),
-    metrics = require('./metrics');
+    metrics = require('./metrics'),
+    isHTML = require('is-html');
 
 function buildTransporterOptions(action, event) {
     var options = {};
@@ -51,9 +52,14 @@ function buildMailOptions(action, event) {
     options = {
         from: myutils.expandVar(action.parameters.from, event, true),
         to: myutils.expandVar(action.parameters.to, event, true),
-        subject: myutils.expandVar(action.parameters.subject || '', event, true),
-        text: myutils.expandVar(action.template, event, true)
+        subject: myutils.expandVar(action.parameters.subject || '', event, true)
     };
+    var body = myutils.expandVar(action.template, event, true);
+    if (isHTML(body)) {
+        options.html = body;
+    } else {
+        options.text = body;
+    }
     if (action.parameters.cc) {
         options.cc = myutils.expandVar(action.parameters.cc, event, true);
     }
